--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -69,19 +69,21 @@ pages:
 #    - Búsquedas: 'cssFundamentos/busquedas.md'
 - Diseño web: 
     - Introducción: 'disenoWeb/index.md'
-    - Mobile first: 'disenoWeb/work.md'
-    - Responsive design: 'disenoWeb/work.md'
-    - Usabilidad: 'disenoWeb/work.md'
-    - Accesibilidad: 'disenoWeb/work.md'
+#    - Mobile first: 'disenoWeb/work.md'
+#    - Responsive design: 'disenoWeb/work.md'
+#    - Usabilidad: 'disenoWeb/work.md'
+#    - Accesibilidad: 'disenoWeb/work.md'
 - Fundamentos de HTML: 
     - Introducción: 'htmlFundamentos/index.md'
     - Descubriendo HTML: 'htmlFundamentos/descubriendoHTML.md'
 #- CSS básico:
 #    - Colores: 'cssColores/index.md'
 #    - Texto: 'cssTexto/index.md'
+- Color: 
+    - Colores web: 'cssColores/coloresHTML.md'
 - Tipografía: 
     - Reseña histórica: 'cssFuentes/index.md'
-    - La propiedad font: 'cssFuentes/propiedadFont.md'
+    - Propiedades de fuente: 'cssFuentes/propiedadesFuente.md'
     - Formato de texto: 'cssFuentes/formatoTexto.md'
     - Usando webfonts: 'cssFuentes/webfonts.md'
     - Elegir tipografía: 'cssFuentes/elegirTipografia.md'
