Cambiando url del sitio

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,7 +2,7 @@
 site_name: 'Diseño web'
 site_description: 'Apuntes sobre diseño web'
 site_author: 'Raul Jesus Lopez'
-site_url: http://www.web.rauljesus.com
+site_url: http://www.rauljesus.xyz/web
 
 # Repositorio
 repo_name: 'Ver en GitHub'
