--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -116,6 +116,10 @@ pages:
 #    - Transciciones: 'cssEfectos/index.md'
 #- Frameworks CSS: 
 #    - Función: 'cssFrameworks/index.md'
+- Bootstrap:
+    - ¿Qué es?: 'bootstrap/index.md'
+    - Primeros pasos: 'bootstrap/primerosPasos.md'
+
 - Control de versiones: 
     - ¿Qué es Git?: 'git/index.md'
     - Entornos distribuidos: 'git/flujoEntornosDistribuidos.md'
